2009-01-22  Chong Yidong  <cyd@stupidchicken.com>

	* fileio.c (Vwrite_region_post_annotation_function)
	(Vwrite_region_annotation_buffers): New vars.
	(build_annotations_unwind): Just reset
	Vwrite_region_annotation_buffers.
	(Fwrite_region): Initialize Vwrite_region_annotation_buffers.
	Call write-region-post-annotation-function.
	(build_annotations): Add to Vwrite_region_annotation_buffers if
	buffer changes.

2009-01-21  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.h (EmacsApp-setAppleMenu:): Conditionalize more correctly on
	Tiger.
	* nsfns.m (ns_do_applescript): Conditionalize
	typeUTF16ExternalRepresentation on Tiger.

2009-01-21  Wolfgang Lux  <wolfgang.lux@gmail.com>  (tiny change)

	* nsterm.m (EV_TRAILER): Always use emacsframe for frame_or_window.


2009-01-21  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsmenu.m (NSMENUPROFILE): Change #if style.

	* nsterm.h (EmacsPrefsController): Add -setPanelFromDefaultValues.

	* nsterm.m (x_set_frame_alpha): Add prototype.
	(ns_fake_keydown, EmacsView-keyUp:): New variable and function to
	handle Ctrl-tab.  (Bug#1841)
	(ns_get_color): Use unsigned long long for scanned hex string value.
	(ns_term_shutdown): Abort on non SIGTERM signals.
	(EmacsPrefsController-setDefaultFont:,-setColors:): Raise the frame.
	(EmacsPrefsController-setPanelFromDefaultValues) New function.
	(EmacsPrefsController-resetToDefaults:): Use it. (Bug#1801)
	(ns_font_to_xlfd, ns_fontname_to_xlfd): Remove, unused.
	(ns_defined_color): Fix settings of the XColor variable fields:
	red,green,blue scale to 2-byte, pixel's parts to 1-byte. (Bug#1663)

	* nsimage.m (EmacsImage+allocInitFromFile:): Set to ignore image
	DPI. (Bug#1316)
	(EmacsImage-setPixelAtX:Y:toRed:green:blue:alpha:): Fix color
	values in onTiger section.

2009-01-19  Chong Yidong  <cyd@stupidchicken.com>

	* xfaces.c (Finternal_set_lisp_face_attribute, Fx_list_fonts):
	Check return value of font_spec_from_name.
	(Fx_list_fonts): Doc fix.
