@@ -1,3 +1,8 @@
+2009-01-21  Adrian Robert  <Adrian.B.Robert@gmail.com>
+
+	* nsterm.m (EmavsView-keyDown:): Treat nil as Qnone for
+	ns_alternate_modifier. (Bug#1217)
+
 2009-01-22  Chong Yidong  <cyd@stupidchicken.com>
 
 	* fileio.c (Vwrite_region_post_annotation_function)
